--- a/app/views/start.html
+++ b/app/views/start.html
@@ -1,18 +1,16 @@
 {% extends "layouts/default.html" %}
-
-{% set title = "NHS.UK Prototype Rig" %}
+{% set title = serviceName %}
 
 {% block main %}
   <div class="nhsuk-width-container">
     <main class="nhsuk-main-wrapper" id="main-content" role="main">
       <div class="nhsuk-grid-row">
         <div class="nhsuk-grid-column-two-thirds">
-          <h1 class="nhsuk-heading-xl">{{ serviceName + " prototype" }}</h1>
+          <h1 class="nhsuk-heading-xl">{{ title }}</h1>
 
           {{ button({
-            text: 'View prototype',
-            href: '/start',
-            classes: 'nhsuk-u-margin-bottom-9'
+            text: 'Start now',
+            href: '/consent/child'
           }) }}
         </div>
       </div>
