--- a/app/views/layouts/wizard.html
+++ b/app/views/layouts/wizard.html
@@ -19,11 +19,13 @@
       <form method="post" novalidate {% if data.features.validation.on %}data-validate{% endif %}>
         {% block form %}{% endblock %}
 
+        {% if not hideButton %}
         <div class="nhsuk-u-margin-top-6">
           {{ button({
             html: buttonText if buttonText else 'Continue'
           }) }}
         </div>
+        {% endif %}
       </form>
 
       {% block afterForm %}{% endblock %}
