--- a/app/views/start.html
+++ b/app/views/start.html
@@ -1,5 +1,5 @@
 {% extends "layouts/default.html" %}
-{% set title = serviceName %}
+{% set title = "Give consent for a flu vaccination" %}
 
 {% block main %}
   <div class="nhsuk-width-container">
@@ -8,10 +8,24 @@
         <div class="nhsuk-grid-column-two-thirds">
           <h1 class="nhsuk-heading-xl">{{ title }}</h1>
 
+          <p>The vaccination is given as a painless spray into each nostril. It is safe and effective in helping to protect children against flu.</p>
+
+          <p>Flu is caused by the influenza virus, which children can catch and spread easily. It can lead to serious problems, such as bronchitis and pneumonia.</p>
+
+          <p>Vaccinating children also protects others who are vulnerable to flu, such as babies and older people.</p>
+
+          <p class="nhsuk-u-margin-bottom-6">The vaccine is offered annually. This academic year, it will be offered to children in all year groups from Reception through to Year 6.</p>
+
           {{ button({
             text: 'Start now',
-            href: '/consent/child'
+            href: '/consent/school'
           }) }}
+
+          <h2 class="nhsuk-heading-m nhsuk-u-margin-top-4">Use this service in another language</h2>
+
+          <p>
+            <a href="#">Change language (English)</a>
+          </p>
         </div>
       </div>
     </main>
