--- a/app/views/start.html
+++ b/app/views/start.html
@@ -1,5 +1,5 @@
 {% extends "layouts/default.html" %}
-{% set title = "Give consent for a flu vaccination" %}
+{% set title = "Give or refuse consent for a flu vaccination" %}
 
 {% block main %}
   <div class="nhsuk-width-container">
