--- a/app/views/consent/health-questions.html
+++ b/app/views/consent/health-questions.html
@@ -6,6 +6,6 @@
   <p>Answering these questions will help us keep your child safe.</p>
 
   <p>
-    If anything changes, or if your child receives their flu vaccine elsewhere, you must tell us as soon as possible.
+    If anything changes, or if your child receives their {{ vaccine }} vaccine elsewhere, you must tell us as soon as possible.
   </p>
 {% endblock %}
