--- a/app/views/consent/consent.html
+++ b/app/views/consent/consent.html
@@ -1,15 +1,25 @@
 {% extends "layouts/wizard.html" %}
-{% set title = "Do you agree to them having a flu vaccination?" %}
+
+{% set title %}
+  {% if vaccine == 'HPV' %}
+    Do you agree to them having both doses of the HPV vaccination?
+  {% else %}
+    Do you agree to them having a flu vaccination?
+  {% endif %}
+{% endset %}
 
 {% block form %}
   {{ radios({
     fieldset: {
       legend: {
-        classes: "nhsuk-fieldset__legend--l nhsuk-u-margin-bottom-6",
+        classes: "nhsuk-fieldset__legend--l",
         text: title,
         isPageHeading: true
       }
     },
+    hint: {
+      text: 'Two doses will be given at least 6 months apart'
+    } if vaccine == "HPV",
     items: [
       {
         text: 'Yes, I agree'
