Remove gelatine line for non flu vaccines

--- a/app/views/consent/no-consent-given.html
+++ b/app/views/consent/no-consent-given.html
@@ -15,7 +15,7 @@
       { text: 'Vaccine already received' },
       { text: 'Vaccine will be given elsewhere' },
       { text: 'Medical reasons' },
-      { text: 'Vaccine contents (porcine gelatine)' },
+      { text: 'Vaccine contents (porcine gelatine)' } if vaccine == "flu",
       {
         divider: 'or'
       },
