Add DPT vaccination journey

--- a/app/views/consent/health-questions-mmr.html
+++ b/app/views/consent/health-questions-mmr.html
@@ -3,9 +3,8 @@
 
 {% block form %}
   <h1 class="nhsuk-heading-l">{{ title }}</h1>
-  <p>Thank you for answering health questions about the {{ vaccine }} vaccine.</p>
 
-  <p>
-    We also want to check that your child is up to date with their Measles, Mumps and Rubella (MMR) vaccinations.
-  </p>
+  <p>Thank you for answering the health questions.</p>
+
+  <p>We also want to check that your child is up to date with their Measles, Mumps and Rubella (MMR) vaccinations.</p>
 {% endblock %}
