--- a/app/views/dpt/3-in-1-no-consent-given.html
+++ b/app/views/dpt/3-in-1-no-consent-given.html
@@ -15,12 +15,11 @@
       { text: 'Vaccine already received' },
       { text: 'Vaccine will be given elsewhere' },
       { text: 'Medical reasons' },
-      { text: 'Vaccine contents (porcine gelatine)' } if vaccine == "flu",
       {
         divider: 'or'
       },
       { text: 'Other' }
     ],
-    decorate: "no-consent-reason"
+    decorate: "3-in-1-no-consent-reason"
   }) }}
 {% endblock %}
