Refactor flu journey

--- a/app/views/flu/start.html
+++ b/app/views/flu/start.html
@@ -18,7 +18,7 @@
 
           {{ button({
             text: 'Start now',
-            href: '/consent/school'
+            href: paths.next
           }) }}
 
           <h2 class="nhsuk-heading-m nhsuk-u-margin-top-4">Use this service in another language</h2>
