--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,7 +11,7 @@
 
           {{ button({
             text: 'View prototype',
-            href: '/start',
+            href: '/flu/start',
             classes: 'nhsuk-u-margin-bottom-9'
           }) }}
         </div>
