--- a/app/views/consent/health-mmr.html
+++ b/app/views/consent/health-mmr.html
@@ -12,7 +12,8 @@
     },
     items: [
       {
-        text: 'Yes'
+        text: 'Yes, they are up to date with their MMR vaccinations',
+        value: 'Yes'
       },
       {
         text: 'No, they have not had 2 doses',
