Tweaks to consent journey
Ask for email first, to allow users to return and change answers more easily
Include email confirmation step
Bring consent questions forward, before GP and NHS number
Add "prefer not to say" to Sex question
Add "I don't know" to MMR question
Remove "Other" from relationship to child

--- a/app/views/consent/health-mmr.html
+++ b/app/views/consent/health-mmr.html
@@ -18,6 +18,9 @@
       {
         text: 'No, they have not had 2 doses',
         value: 'No'
+      },
+      {
+        text: 'I don’t know'
       }
     ],
     decorate: "health.had-mmr"
