--- a/app/views/dpt/men-acwy-consent.html
+++ b/app/views/dpt/men-acwy-consent.html
@@ -14,7 +14,7 @@
     },
     items: [
       {
-        text: 'Yes, I agree'
+        text: 'Yes, I agree to them having the MenACWY vaccine'
       },
       {
         text: 'No'
