--- a/app/views/dpt/start.html
+++ b/app/views/dpt/start.html
@@ -10,7 +10,7 @@
 
           <p>The 3-in-1 teenage booster, also known as the Td/IPV vaccine, boosts protection against 3 diseases: tetanus, diptheria and polio.</p>
 
-          <p>It’s normally given at the same time as the MenACWY vaccine to prevent meningitis and septicaemia.</p>
+          <p>The MenACWY vaccine, which helps to prevent meningitis and septicaemia, is normally given at the same time as the 3-in-1.</p>
 
           <p class="nhsuk-u-margin-bottom-6">Both vaccines are offered to all young people aged 13 to 15 (in school Years 9 and 10). They’re given as injections into the upper arm.</p>
 
