--- a/app/views/consent/child.html
+++ b/app/views/consent/child.html
@@ -52,6 +52,9 @@
       },
       {
         text: 'Male'
+      },
+      {
+        text: 'Prefer not to say'
       }
     ],
     decorate: "child.sex"
