--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,6 +34,11 @@
           <h2 class="nhsuk-heading-m">Other prototypes</h2>
 
           <p><a href="https://poc-prototype.herokuapp.com/">Point of care prototype</a></p>
+
+          <h2 class="nhsuk-heading-m">Design history</h2>
+          <p>
+            <a href="http://good-machine-design-history.herokuapp.com/">Design history</a>
+          </p>
         </div>
       </div>
     </main>
