Iterations to the flu journey from research

--- a/app/views/consent/child-dob.html
+++ b/app/views/consent/child-dob.html
@@ -1,5 +1,5 @@
 {% extends "layouts/wizard.html" %}
-{% set title = "What is their date of birth?" %}
+{% set title = "What is your child’s date of birth?" %}
 
 {% block form %}
   {{ dateInput({
