--- a/app/views/consent/child-gp.html
+++ b/app/views/consent/child-gp.html
@@ -1,5 +1,5 @@
 {% extends "layouts/wizard.html" %}
-{% set title = "Are they registered with a GP?" %}
+{% set title = "Is your child registered with a GP?" %}
 
 {% block form %}
   {% set html %}
