--- a/app/views/consent/health-egg-allergy.html
+++ b/app/views/consent/health-egg-allergy.html
@@ -1,5 +1,5 @@
 {% extends "layouts/wizard.html" %}
-{% set title = "Does your child have a severe egg allergy?" %}
+{% set title = "Has your child been admitted to intensive care because of a severe egg allergy?" %}
 
 {% block form %}
   {% set html %}
