--- a/app/views/consent/no-consent-given.html
+++ b/app/views/consent/no-consent-given.html
@@ -21,11 +21,11 @@
       }
     },
     items: [
-      { text: 'Personal choice' },
+      { text: 'Vaccine contains gelatine from pigs' } if vaccine == "flu",
       { text: 'Vaccine already received' },
       { text: 'Vaccine will be given elsewhere' },
       { text: 'Medical reasons' },
-      { text: 'Vaccine contents (porcine gelatine)' } if vaccine == "flu",
+      { text: 'Personal choice' },
       {
         divider: 'or'
       },
