--- a/app/views/consent/school.html
+++ b/app/views/consent/school.html
@@ -24,11 +24,11 @@
   {{ radios({
     fieldset: {
       legend: {
-        text: "Is this school correct?"
+        text: "Is this their school?"
       }
     },
     items: [
-      { text: 'Yes' },
+      { text: 'Yes, they go to this school' },
       { text: 'No, I need to pick a different school' }
     ],
     decorate: "child.school"
