--- a/app/views/consent/child-gp.html
+++ b/app/views/consent/child-gp.html
@@ -15,7 +15,7 @@
   {{ radios({
     fieldset: {
       legend: {
-        classes: "nhsuk-fieldset__legend--l nhsuk-u-margin-bottom-6",
+        classes: "nhsuk-fieldset__legend--l",
         text: title,
         isPageHeading: true
       }
