--- a/app/views/consent/school.html
+++ b/app/views/consent/school.html
@@ -18,7 +18,8 @@
   {% endset %}
 
   {{ insetText({
-    HTML: html
+    HTML: html,
+    classes: "nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-4"
   }) }}
 
   {{ radios({
