Add a confirmation for users with possible contraindications

--- a/app/views/consent/_mmr-confirmation.html
+++ b/app/views/consent/_mmr-confirmation.html
@@ -1,6 +1,6 @@
 <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">
 
-{% if d('health.mmr-consent') === 'Yes' %}
+{% if d('mmr-consent') === 'Yes' %}
   <h2 class="nhsuk-heading-m">MMR catch-up</h2>
 
   <p>We’ll contact you to arrange an appointment at a catch-up clinic.</p>
