--- a/app/views/consent/health-aspirin.html
+++ b/app/views/consent/health-aspirin.html
@@ -7,7 +7,7 @@
       label: {
         text: "Give details"
       },
-      decorate: "health.asthma-details"
+      decorate: "health.aspirin-details"
     }) }}
   {% endset %}
 
@@ -28,6 +28,6 @@
       },
       { text: 'No' }
     ],
-    decorate: "health.asthma"
+    decorate: "health.aspirin"
   }) }}
 {% endblock %}
