--- a/app/views/dpt/confirmation.html
+++ b/app/views/dpt/confirmation.html
@@ -47,7 +47,7 @@
     <p>We’ll let you know when the 2nd dose will be given.</p>
   {% endif %}
 
-  {% if d('health.mmr-consent') === 'Yes' %}
+  {% if d('mmr-consent') === 'Yes' %}
     <h2 class="nhsuk-heading-m">MMR catch-up</h2>
 
     <p>We’ll contact you to arrange an appointment at a catch-up clinic.</p>
