Simplify GP question

--- a/app/views/consent/child-gp.html
+++ b/app/views/consent/child-gp.html
@@ -6,7 +6,7 @@
     {{ input({
       label: {
         classes: "nhsuk-label--s nhsuk-u-margin-bottom-1",
-        text: "What is the name of their GP surgery?"
+        text: "Name of GP surgery"
       },
       decorate: "child.gp"
     }) }}
