Add HPV emails for research

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,6 +16,12 @@
             <li><a href="/dpt/start">Give or refuse consent for the 3-in-1 teenage booster and MenACWY vaccine</a></li>
           </ul>
 
+          <h2 class="nhsuk-heading-m">Emails</h2>
+          <ul class="nhsuk-list">
+            <li><a href="/emails/hpv-consent">Request consent for HPV vaccination</a></li>
+            <li><a href="/emails/hpv-reminder">Reminder about consent for HPV vaccination</a></li>
+          </ul>
+
           <h2 class="nhsuk-heading-m">School journeys</h2>
           <p>The journeys in these prototypes are not connected:</p>
           <ul class="nhsuk-list">
