--- a/app/views/layouts/email.html
+++ b/app/views/layouts/email.html
@@ -3,7 +3,7 @@
 {% set bodyClasses = "app-email__body" %}
 {% set containerClasses = "app-email__header-and-message-container" %}
 {% set mainClasses = "app-email__message" %}
-{% set title = subject %}
+{% set title = "Email: " + subject %}
 {% block skipLink %}{% endblock %}
 {% block header %}{% endblock %}
 {% block footer %}{% endblock %}
