Add email for students

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,6 +20,7 @@
           <ul class="nhsuk-list">
             <li><a href="/emails/hpv-consent">Request consent for HPV vaccination</a></li>
             <li><a href="/emails/hpv-reminder">Reminder about consent for HPV vaccination</a></li>
+            <li><a href="/emails/hpv-student">Email for students about HPV vaccination</a></li>
           </ul>
 
           <h2 class="nhsuk-heading-m">School journeys</h2>
