--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@ $govuk-assets-path: "/govuk/assets/";
 @import "govuk-prototype-components/x-govuk/all";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
+@import "_unbranded.scss";
 @import "_email.scss";
 
 .nhsuk-header__service-name {
