--- a/app/views/emails/hpv-student.html
+++ b/app/views/emails/hpv-student.html
@@ -40,9 +40,17 @@
 
   <p>If you want to give permission yourself, you can talk to a nurse on 6 June and explain why you want the vaccine. If you go on to have the vaccine, your parents will get an email to let them know this has happened.</p>
 
+  <h2 class="nhsuk-heading-m">What if I don’t want the vaccine?</h2>
+
+  <p>You can ask your parents to let us know that you don’t want the vaccine.</p>
+
+  <p>If they want you to have the vaccine but you don’t, you can say this to the nurse when you see them on 6 June.</p>
+
   <h2 class="nhsuk-heading-m">What should I do now?</h2>
 
   <p>Have a read of <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1059900/UKHSA-HPV-vaccination-for-all-leaflet.pdf">the leaflet about HPV</a> that comes with this email to find out more about the HPV vaccine. We also suggest you talk to your parents about what you want.</p>
 
-  {% include 'emails/_contact.html' %}
+  <h2 class="nhsuk-heading-m">You can talk to your local health team</h2>
+
+  <p>If you want to speak to someone from your local health team, you can call 01234 321456. You can also email example@nhs.uk.</p>
 {% endblock %}
