--- a/app/views/emails/hpv-consent.html
+++ b/app/views/emails/hpv-consent.html
@@ -14,5 +14,10 @@
   </p>
 
   {% include 'emails/_hpv-about.html' %}
+
+  <h2 class="nhsuk-heading-m">Talk to your child about what they want</h2>
+
+  <p>We suggest you talk to your child about the vaccine before you respond to us. If they want to have the vaccine, they have the right to request this themselves.</p>
+
   {% include 'emails/_contact.html' %}
 {% endblock %}
