--- a/app/views/consent/health-regular-medication.html
+++ b/app/views/consent/health-regular-medication.html
@@ -1,5 +1,5 @@
 {% extends "layouts/wizard.html" %}
-{% set title = "Does your child take any regular medication, excluding contraception?" %}
+{% set title = "Does your child take any regular medication?" %}
 
 {% block form %}
   {% set html %}
