Add tweak to HPV emails
- We need to make it clear it should be given before becoming sexually active
- We need to give more details about the vaccine before the consent link

--- a/app/views/emails/hpv-consent.html
+++ b/app/views/emails/hpv-consent.html
@@ -5,6 +5,20 @@
 {% block email %}
   <p>Your local health team are coming to [name of school] on Tuesday 6 June 2023 to give the first dose of the human papillomavirus (HPV) vaccine to pupils in Year 8.</p>
 
+  <h2 class="nhsuk-heading-m">What the vaccine is for</h2>
+
+  <p>The HPV vaccine helps protect against cancers caused by HPV, including:</p>
+
+  <ul class="nhsuk-list nhsuk-list--bullet">
+    <li>cervical cancer</li>
+    <li>some mouth and throat (head and neck) cancers</li>
+    <li>some cancers of the anal and genital areas</li>
+  </ul>
+
+  <p>It also helps protect against genital warts.</p>
+
+  <p>The HPV vaccine works best if it’s given before young people become sexually active.</p>
+
   <h2 class="nhsuk-heading-m">Please give or refuse consent</h2>
 
   <p>If you want your child to receive this vaccine at school, you need to give consent by Friday 2 June.</p>
@@ -13,7 +27,13 @@
     <a href="/hpv/start">Give or refuse consent for the HPV vaccination</a>
   </p>
 
-  {% include 'emails/_hpv-about.html' %}
+  <h2 class="nhsuk-heading-m">About the HPV vaccine</h2>
+
+  <p>Girls and boys in England are offered the 1st HPV vaccination when they're in Year 8. The 2nd dose is offered 6 to 24 months later.</p>
+
+  <p>It’s important to have both doses of the vaccine to be properly protected.</p>
+
+  <p><a href="https://www.nhs.uk/conditions/vaccinations/hpv-human-papillomavirus-vaccine/">Find out more about the HPV vaccine on NHS.UK</a></p>
 
   <h2 class="nhsuk-heading-m">Talk to your child about what they want</h2>
 
