--- a/app/views/emails/hpv-student.html
+++ b/app/views/emails/hpv-student.html
@@ -26,6 +26,8 @@
   <p>When the vaccine is injected into your body, your immune system makes antibodies. If you got HPV in the future, these antibodies would stop the virus from infecting your cells.</p>
   <p>The vaccine is given in your arm, and you need two doses to be fully protected.</p>
 
+  <p>It works best if it’s given before you’re sexually active.</p>
+
   <h2 class="nhsuk-heading-m">How do I get the vaccine?</h2>
 
   <p>The nurses coming into school can only give you the vaccine if they have permission. We’ve contacted your parents and asked if they’re happy for you to have the vaccine.</p>
