--- a/app/views/emails/hpv-consent.html
+++ b/app/views/emails/hpv-consent.html
@@ -29,7 +29,7 @@
 
   <h2 class="nhsuk-heading-m">About the HPV vaccine</h2>
 
-  <p>Girls and boys in England are offered the 1st HPV vaccination when they're in Year 8. The 2nd dose is offered 6 to 24 months later.</p>
+  <p>Girls and boys in England are offered the 1st HPV vaccination when they’re in Year 8. The 2nd dose is offered 6 to 24 months later.</p>
 
   <p>It’s important to have both doses of the vaccine to be properly protected.</p>
 
