--- a/app/views/emails/hpv-reminder.html
+++ b/app/views/emails/hpv-reminder.html
@@ -27,7 +27,7 @@
 
   <p>The HPV vaccine works best if it’s given before young people become sexually active.</p>
 
-  <p>Girls and boys in England are offered the 1st HPV vaccination when they're in Year 8. The 2nd dose is offered 6 to 24 months later.</p>
+  <p>Girls and boys in England are offered the 1st HPV vaccination when they’re in Year 8. The 2nd dose is offered 6 to 24 months later.</p>
 
   <p>It’s important to have both doses of the vaccine to be properly protected.</p>
 
