Simplify the consent journey
- removed MMR
- removed NHS number question
- removed email and code at start, added email field to “About you”
- added hint text about why we ask for telephone number

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,13 @@ $govuk-assets-path: "/govuk/assets/";
 .nhsuk-header__service-name {
   max-width: none !important;
 }
+
+.app-u-frutiger,
+.app-u-frutiger * {
+  font-family: "Frutiger W01", Arial, sans-serif !important
+}
+
+.app-panel h1 {
+  @include govuk-font(36, $weight: bold);
+  font-family: "Frutiger W01", Arial, sans-serif !important
+}
