--- a/app/views/consent/confirmation.html
+++ b/app/views/consent/confirmation.html
@@ -1,22 +1,23 @@
 {% extends "layouts/wizard.html" %}
 {% set name = d('child.name') or 'Bobby Doe' %}
+{% set email = d('parent.email') or 'jane.doe@example.com' %}
 {% set 3in1consent = data['3-in-1-consent'] !== 'No' %}
 {% set menACWYconsent = data['men-acwy-consent'] !== 'No' %}
 {% set consentForBoth = 3in1consent and menACWYconsent %}
 
 {% set title %}
   {% if vaccine == "HPV" %}
-    Your child will get the HPV vaccination at school
+    Your child will get their first HPV vaccination at school on 6 June 2023
   {% elseif vaccine == "DPT" %}
     {% if consentForBoth %}
-      Your child will get the 3-in-1 teenage booster and MenACWY vaccinations at school
+      Your child will get their 3-in-1 teenage booster and MenACWY vaccinations at school on 6 June 2023
     {% elseif 3in1consent %}
-      Your child will get the 3-in-1 teenage booster at school
+      Your child will get their 3-in-1 teenage booster at school on 6 June 2023
     {% elseif menACWYconsent %}
-      Your child will get the MenACWY vaccination at school
+      Your child will get their MenACWY vaccination at school on 6 June 2023
     {% endif %}
   {% else %}
-    Your child will get a nasal flu vaccination at school
+    Your child will get their nasal flu vaccination at school on 6 June 2023
   {% endif %}
 {% endset %}
 
@@ -24,63 +25,10 @@
 {% block pageNavigation %}{% endblock %}
 
 {% block form %}
-  <h1 class="nhsuk-heading-xl">{{ title }}</h1>
-
-  <p>We’ve sent a confirmation to jane.doe@example.com.</p>
-
-  {% if vaccine == "DPT" %}
-    <h2 class="nhsuk-heading-m">Vaccination details</h2>
-  {% else %}
-    <h2 class="nhsuk-heading-m">{{ vaccine | capitaliseFirstLetter }} vaccination</h2>
-  {% endif %}
-
-  {% set dptHtml %}
-    {% if 3in1consent %}3-in-1 teenage booster{% endif %}
-    {% if consentForBoth %}<br />{% endif %}
-    {% if menACWYconsent %}MenACWY vaccination{% endif %}
-  {% endset %}
-
-  {{ summaryList({
-    rows: decorateRows([
-      {
-        key: { text: "Child" },
-        value: { text: name }
-      },
-      {
-        key: { text: "Date" },
-        value: { text: "Tuesday 6 June 2023" }
-      },
-      {
-        key: { text: "Location" },
-        value: { text: "Hele’s Secondary School" }
-      } if secondary else {
-        key: { text: "Location" },
-        value: { text: "St Mary’s Primary School" }
-      },
-      {
-        key: { text: "Vaccine" },
-        value: { text: "Nasal flu vaccination" }
-      } if vaccine == 'flu',
-      {
-        key: { text: "Vaccine" },
-        value: { text: "HPV vaccination (1st dose)" }
-      } if vaccine == 'HPV',
-      {
-        key: { text: "Vaccines" if consentForBoth else "Vaccine"  },
-        value: { html: dptHtml }
-      } if vaccine == 'DPT'
-    ])
+  {{ govukPanel({
+    titleHtml: title,
+    classes: "app-panel nhsuk-u-margin-bottom-6"
   }) }}
 
-  {% if vaccine == 'HPV' %}
-    <p>We’ll let you know when the 2nd dose will be given.</p>
-  {% endif %}
-
-  {% include 'consent/_mmr-confirmation.html' %}
-
-  <h2 class="nhsuk-heading-s">If anything changes</h2>
-
-  <p>[TODO] Contact the immunisation team</p>
-
-  {% include 'consent/_another-child.html' %}
+  <p>We’ve sent confirmation to {{ email }}</p>
 {% endblock %}
