--- a/app/views/consent/confirmation-contraindications.html
+++ b/app/views/consent/confirmation-contraindications.html
@@ -24,7 +24,7 @@
 {% block pageNavigation %}{% endblock %}
 
 {% block form %}
-  <h1 class="nhsuk-heading-xl">{{ title }}</h1>
+  <h1 class="nhsuk-heading-l">{{ title }}</h1>
 
   <p>A member of our health team will be in touch to discuss your answers to the health questions.</p>
 
