--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,6 +21,8 @@
             <li><a href="/emails/hpv-consent">Request consent for HPV vaccination</a></li>
             <li><a href="/emails/hpv-reminder">Reminder about consent for HPV vaccination</a></li>
             <li><a href="/emails/hpv-student">Email for students about HPV vaccination</a></li>
+            <li><a href="/emails/hpv-consent-confirmation">Confirmation of agreement for HPV vaccination</a></li>
+            <li><a href="/emails/hpv-vaccine-given">Vaccine given</a></li>
           </ul>
 
           <h2 class="nhsuk-heading-m">School journeys</h2>
