--- a/app/views/consent/child.html
+++ b/app/views/consent/child.html
@@ -26,7 +26,7 @@
   {{ radios({
     fieldset: {
       legend: {
-        text: "Are they known by another name?"
+        text: "Do they use a different name in school?"
       }
     },
     items: [
