Put the old emails back for S&T

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,8 +19,10 @@
           <h2 class="nhsuk-heading-m">Emails</h2>
           <ul class="nhsuk-list">
             <li><a href="/emails/hpv-consent">Request consent for HPV vaccination</a></li>
+            <li><a href="/emails/old-hpv-consent">Old: Request consent for HPV vaccination</a></li>
             <li><a href="/emails/hpv-reminder">Reminder about consent for HPV vaccination</a></li>
             <li><a href="/emails/hpv-student">Email for students about HPV vaccination</a></li>
+            <li><a href="/emails/old-hpv-student">Old: Email for students about HPV vaccination</a></li>
             <li><a href="/emails/hpv-consent-confirmation">Confirmation of agreement for HPV vaccination</a></li>
             <li><a href="/emails/hpv-vaccine-given">Vaccine given</a></li>
           </ul>
