--- a/app/views/consent/parent-guardian.html
+++ b/app/views/consent/parent-guardian.html
@@ -11,40 +11,6 @@
     decorate: "parent.name"
   }) }}
 
-  {{ input({
-    label: {
-      text: "Telephone number"
-    },
-    hint: {
-      text: "We might need to call you about your child’s vaccination"
-    },
-    decorate: "parent.telephone"
-  }) }}
-
-  {{ input({
-    label: {
-      text: "Email address"
-    },
-    decorate: "parent.email"
-  }) }}
-
-  {{ radios({
-    fieldset: {
-      legend: {
-        text: "What’s the best way for us to contact you?"
-      }
-    },
-    hint: {
-      text: "For example, to send a confirmation"
-    },
-    items: [
-      { text: 'By text message' },
-      { text: 'By email' },
-      { text: 'By telephone' }
-    ],
-    decorate: "parent.best-contact-method"
-  }) }}
-
   {% set other %}
     <p>You need parental responsibility to give consent. This means you have legal rights and duties relating to the child.</p>
     {{ input({
@@ -76,5 +42,61 @@
       }
     ],
     decorate: "parent.relationship"
+  }) }}
+
+  {{ input({
+    label: {
+      text: "Email address"
+    },
+    decorate: "parent.email"
+  }) }}
+
+  {{ input({
+    label: {
+      text: "Telephone number"
+    },
+    hint: {
+      text: "A nurse might call you about your child’s vaccination"
+    },
+    decorate: "parent.telephone"
+  }) }}
+
+  {% set accessibilityOptions %}
+    {% set otherHtml %}
+      {{ textarea({
+        label: {
+          text: "Give details"
+        },
+        rows: 5,
+        formGroup: {
+          classes: 'nhsuk-u-margin-bottom-0'
+        },
+        decorate: "parent.accessibility-other"
+      }) }}
+    {% endset %}
+
+    {{ radios({
+      fieldset: {
+        legend: {
+          text: "Do you need any of the following?"
+        }
+      },
+      items: [
+        { text: 'Text only (no voice calls)' },
+        { text: 'Voice only (no text)' },
+        {
+          text: 'Other',
+          conditional: {
+            html: otherHtml
+          }
+        }
+      ],
+      decorate: "parent.accessibility"
+    }) }}
+  {% endset %}
+
+  {{ details({
+    text: "I need to tell you more about how to contact me",
+    HTML: accessibilityOptions
   }) }}
 {% endblock %}
