--- a/app/views/consent/check-answers.html
+++ b/app/views/consent/check-answers.html
@@ -1,9 +1,84 @@
 {% extends "layouts/wizard.html" %}
 {% set title = "Check your answers and confirm" %}
 {% set buttonText = "Confirm" %}
+{% set basePath = '/' + (vaccine | lower) + '/' %}
 
 {% block form %}
   <h1 class="nhsuk-heading-l">{{ title }}</h1>
 
-  <p>[Review your answers – this has not been built yet]</p>
+  <h2 class="nhsuk-heading-m">Consent</h2>
+
+  <div class="nhsuk-card">
+    <div class="nhsuk-card__content">
+      {{ summaryList({
+        rows: decorateRows([
+          {
+            key: 'Do you agree?',
+            data: 'consent',
+            href: basePath + 'consent/consent'
+          }
+        ])
+      }) }}
+    </div>
+  </div>
+
+  <h2 class="nhsuk-heading-m">About your child</h2>
+  <div class="nhsuk-card">
+    <div class="nhsuk-card__content">
+      {{ summaryList({
+        rows: decorateRows([
+          {
+            key: 'Child’s name',
+            data: 'child.name',
+            href: basePath + 'consent/child'
+          },
+          {
+            key: 'Also known as',
+            data: 'child.preferred-name',
+            href: basePath + 'consent/child'
+          } if d('child.preferred-name'),
+          {
+            key: 'Date of birth',
+            value: d('child.dob') | isoDateFromDateInput | govukDate,
+            href: basePath + 'consent/child-dob'
+          } if d('child.dob'),
+          {
+            key: 'School',
+            value: 'Hele’s Secondary School',
+            href: basePath + 'consent/school'
+          }
+        ])
+      }) }}
+    </div>
+  </div>
+
+  <h2 class="nhsuk-heading-m">About you</h2>
+  <div class="nhsuk-card">
+    <div class="nhsuk-card__content">
+      {{ summaryList({
+        rows: decorateRows([
+          {
+            key: 'Your name',
+            data: 'parent.name',
+            href: basePath + 'consent/parent-guardian'
+          },
+          {
+            key: 'Relationship',
+            data: 'parent.relationship',
+            href: basePath + 'consent/parent-guardian'
+          },
+          {
+            key: 'Email address',
+            data: 'parent.email',
+            href: basePath + 'consent/parent-guardian'
+          },
+          {
+            key: 'Phone number',
+            data: 'parent.telephone',
+            href: basePath + 'consent/parent-guardian'
+          }
+        ])
+      }) }}
+    </div>
+  </div>
 {% endblock %}
