--- a/app/views/consent/child.html
+++ b/app/views/consent/child.html
@@ -40,7 +40,7 @@
         text: 'No'
       }
     ],
-    decorate: "child.preferred-name"
+    decorate: "child.preferred-name-choice"
   }) }}
 
   {% if false and vaccine == 'HPV' %}
